# 2dgamengine

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  tiled-project.tiled-session
assets/entities/: skeleton.json
assets/levels/: level_0.json
assetsv2/entities/: skeleton.json
assetsv2/levels/: level_0.json
assetsv2/maps/: level_0.tmj  level_0_Grass.csv  level_0_Props.csv  level_0_Structures.csv  map_0.tmx
assetsv2/tilesets/: TX Plant.tsx  TX Props.tsx  TX Struct.tsx  TX Tileset Stone Ground.tsx  TX Tileset Wall.tsx  grass.tsj  props.tsj
src/: Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: AIComponent.h  AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  ConsumableComponent.h  DialogueComponent.h  DropAnimationComponent.h  EquippableComponent.h  HealthComponent.h  InventoryComponent.h  ItemComponent.h  KeyboardControlledComponent.h  LifeTimeComponent.h  LootTableComponent.h  MouseTrackComponent.h  NameComponent.h  PlayerComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  SpriteComponent.cpp  SpriteComponent.h  TagComponent.h  TextComponent.h  TransformComponent.cpp  TransformComponent.h
src/Components/elements/: AIBehavior.h  DropItem.h  EnemyVariantClass.h  Item.h  ItemType.h  LootTableElement.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  DamageEvent.h  DropLootEvent.h  KeyDownEvent.h  KeyPressedEvent.h  KeyUpEvent.h  LootEvent.h  MouseEvent.h  PickupItemEvent.h
src/Factory/: EnemyFactory.cpp  EnemyFactory.h  ItemFactory.cpp  ItemFactory.h  LevelFactory.cpp  LevelFactory.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AISystem.h  AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  DestroyEntittySystem.h  EnemyKillSystem.h  EquipmentSystem.h  HealthSystem.h  InventorySystem.h  KeyboardControlSystem.h  KeyboardMovementSystem.h  LootSystem.h  MouseTrackingSystem.h  MovementSystem.cpp  MovementSystem.h  ProjectileEmitSystem.h  RenderSystem.cpp  RenderSystem.h  RenderTextSystem.h  ScannerSystem.h  SpellBindSystem.h
src/tools/: LinkedList.cpp  LinkedList.h
